--- a/templates/base.html
+++ b/templates/base.html
@@ -14,18 +14,30 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
   </head>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">CloudApp</a>
+    <a class="navbar-brand" href="{{ url_for('main.index') }}">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+        {% if current_user.is_authenticated %}
         <li class="nav-item">
-            <a class="nav-link" href="#">Notes</a>
+            <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
+        </li>
+        {% endif %}
+        {% if not current_user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Todos</a>
+            <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign Up</a>
         </li>
+        {% endif %}
+        {% if current_user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+        {% endif %}
+      </li>
         </ul>
     </div>
     </nav>
