--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,13 @@
         <ul class="navbar-nav mr-auto">
         {% if current_user.is_authenticated %}
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
+          <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('notes.show_notes') }}">Notes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.profile') }}">Todos</a>
         </li>
         {% endif %}
         {% if not current_user.is_authenticated %}
