--- a/templates/notes_add.html
+++ b/templates/notes_add.html
@@ -16,6 +16,7 @@
                 <input type="text" name="text" class="form-control" placeholder="Text">
             </div>
             <div class="form-group">
+                <a href="{{ url_for('notes.show_notes') }}" type="close" class="btn btn-secondary">Close</a>
                 <input type="submit" value="Submit" class="btn float-right login_btn">
             </div>
         </form>
