--- a/templates/notes_edit.html
+++ b/templates/notes_edit.html
@@ -16,7 +16,8 @@
                 <input type="text" name="text" class="form-control" value="{{note.text}}">
             </div>
             <div class="form-group">
-                <input type="submit" value="Submit" class="btn float-right login_btn">
+                <a href="{{ url_for('notes.show_notes') }}" type="close" class="btn btn-secondary">Close</a>
+                <input type="submit" value="Update" class="btn float-right login_btn">
             </div>
         </form>
     </div>
