added full todo functionality, checking whether todo was done, editing, listing completed and uncompleted, editing by click in todo name

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="{{ url_for('notes.show_notes') }}">Notes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('main.profile') }}">Todos</a>
+          <a class="nav-link" href="{{ url_for('todos.show_todos') }}">Todos</a>
         </li>
         {% endif %}
         {% if not current_user.is_authenticated %}
