--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,41 +4,87 @@
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card_login_with_alert_sign_up">
-			{% with messages = get_flashed_messages() %}
-				{% if messages %}
-					<div class="alert alert-danger" role="alert">
-						{{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
-					</div>
-				{% endif %}
-			{% endwith %}
+			{% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
 			<div class="card_sign_up">
 			<div class="card-header">
 				<h3>Sign Up</h3>
 			</div>
 				<div class="card-body">
-					<form method="POST" action="/signup">
-						<div class="input-group form-group">
-							<div class="input-group-prepend">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+					<form method="POST" action="{{ url_for('auth.signup') }}">
+						{{ form.csrf_token() }}
+						<fieldset class="form-group">
+							<div class=" form-group">
+								{{ form.username.label(class="form-control-label") }}
+			
+								{% if form.username.errors %}
+									{{ form.username(class="form-control form-control-lg is-invalid") }}
+									<div class="invalid-feedback">
+										{% for error in form.username.errors %}
+											<span>{{ error }}</span>
+										{% endfor %}
+									</div>
+								{% else %}
+									{{ form.username(class="form-control form-control-lg", placeholder='Username') }}
+								{% endif %}
 							</div>
-							<input type="email" name="email" class="form-control" placeholder="Your Email">	
-						</div>
-						<div class="input-group form-group">
-							<div class="input-group-prepend">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+							<div class="form-group">
+								{{ form.email.label(class="form-control-label") }}
+								{% if form.email.errors %}
+									{{ form.email(class="form-control form-control-lg is-invalid") }}
+									<div class="invalid-feedback">
+										{% for error in form.email.errors %}
+											<span>{{ error }}</span>
+										{% endfor %}
+									</div>
+								{% else %}
+									{{ form.email(class="form-control form-control-lg", placeholder='Email') }}
+								{% endif %}
 							</div>
-							<input type="text" name="name" class="form-control" placeholder="Name">
-						</div>
-						<div class="input-group form-group">
-							<div class="input-group-prepend">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							<div class="form-group">
+								{{ form.password.label(class="form-control-label") }}
+								{% if form.password.errors %}
+									{{ form.password(class="form-control form-control-lg is-invalid") }}
+									<div class="invalid-feedback">
+										{% for error in form.password.errors %}
+											<span>{{ error }}</span>
+										{% endfor %}
+									</div>
+								{% else %}
+									{{ form.password(class="form-control form-control-lg", placeholder='Password') }}
+								{% endif %}
 							</div>
-							<input type="password" name="password" class="form-control" placeholder="Your password">
-						</div>
+							<div class="form-group">
+								{{ form.confirm_password.label(class="form-control-label") }}
+								{% if form.confirm_password.errors %}
+									{{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
+									<div class="invalid-feedback">
+										{% for error in form.confirm_password.errors %}
+											<span>{{ error }}</span>
+										{% endfor %}
+									</div>
+								{% else %}
+									{{ form.confirm_password(class="form-control form-control-lg", placeholder='Confirm Password') }}
+								{% endif %}
+							</div>
+						</fieldset>
 						<div class="form-group">
-							<input type="submit" value="Sign Up" class="btn float-right login_btn">
+							{{ form.submit(class="btn btn-outline-info") }}
 						</div>
 					</form>
+					</div>
+					<div class="border-top pt-3">
+						<small class="text-muted">
+							Already Have An Account? <a class="ml-2" href="{{ url_for('auth.login') }}">Sign In</a>
+						</small>
+					</div>
 				</div>
 			</div>
 		</div>
