Added input validation in todos section, fixed edit in notes and todo

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,9 @@
 
 html,body{
-background-image: url('https://raw.githubusercontent.com/basnijholt/lovelace-ios-dark-mode-theme/master/backgrounds/homekit-bg-4.jpeg');
+/*background-image: url('https://raw.githubusercontent.com/basnijholt/lovelace-ios-dark-mode-theme/master/backgrounds/homekit-bg-4.jpeg');
 background-size: cover;
-background-repeat: no-repeat;
+background-repeat: no-repeat;*/
+background-color: darkolivegreen;
 height: 100%;
 }
 
