--- a/templates/notes.html
+++ b/templates/notes.html
@@ -13,7 +13,7 @@
                 </div>
             {% endfor %}
         {% endif %}
-    {% endwith %}>
+    {% endwith %}
     <div class="card-body">
         <a href="{{ url_for('notes.add_note') }}" type="add" class="btn float-ribtn login_btn">Add</a>
     </div>
