--- a/templates/todos.html
+++ b/templates/todos.html
@@ -2,23 +2,32 @@
 
 {% block content %}
 <div class="container">
-    {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-            <div class="alert alert-success" role="alert">
-                {{ messages[0] }}
-            </div>
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
         {% endif %}
     {% endwith %}
     <div class="card-body">
-        <form method="POST" action="{{ url_for('todos.post_todo') }}">
-            <div class="input-group form-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fas fa-user"></i></span>
-                </div>
-                <input type="text" name="text" class="form-control" placeholder="todo">	
+        <form method="POST" action="{{ url_for('todos.add_todo') }}">
+            {{ form.csrf_token() }}
+            <div class="form-group">
+                {% if form.text.errors %}
+                    {{ form.text(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.text.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.text(class="form-control form-control-lg", placeholder="Todo") }}
+                {% endif %}
             </div>
             <div class="form-group">
-                <input type="submit" value="Submit" class="btn float-right login_btn">
+                {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
     </div>
@@ -37,17 +46,27 @@
                 <div class="modal fade" id="editModal{{ todo.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <form method="POST" action="{{ url_for('todos.update_todo', id=todo.id) }}">
+                            <form method="POST" action="{{ url_for('todos.edit_todo', id=todo.id) }}">
+                                {{ form.csrf_token() }}
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Update todo?</h5>
-                                    <input type="text" name="text" class="form-control" value="{{todo.text}}">
+                                    {% if form.text.errors %}
+                                        {{ form.text(class="form-control form-control-lg is-invalid", value=todo.text) }}
+                                        <div class="invalid-feedback">
+                                            {% for error in form.text.errors %}
+                                                <span>{{ error }}</span>
+                                            {% endfor %}
+                                        </div>
+                                    {% else %}
+                                        {{ form.text(class="form-control form-control-lg", value=todo.text) }}
+                                    {% endif %}                                    
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <input type="submit" value="Submit" class="btn float-right login_btn">
+                                    {{ form.submit(class="btn btn-outline-info") }}
                                 </div>
                             </form>
                         </div>
@@ -90,17 +109,26 @@
                 <div class="modal fade" id="editModal{{ todo.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <form method="POST" action="{{ url_for('todos.update_todo', id=todo.id) }}">
+                            <form method="POST" action="{{ url_for('todos.edit_todo', id=todo.id) }}">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Update todo?</h5>
-                                    <input type="text" name="text" class="form-control" value="{{todo.text}}">
+                                    {% if form.text.errors %}
+                                        {{ form.text(class="form-control form-control-lg is-invalid") }}
+                                        <div class="invalid-feedback">
+                                            {% for error in form.text.errors %}
+                                                <span>{{ error }}</span>
+                                            {% endfor %}
+                                        </div>
+                                    {% else %}
+                                        {{ form.text(class="form-control form-control-lg") }}
+                                    {% endif %}
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <input type="submit" value="Submit" class="btn float-right login_btn">
+                                    {{ form.submit(class="btn btn-outline-info") }}
                                 </div>
                             </form>
                         </div>
