--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
 				<h3>Sign In</h3>
 			</div>
                 <div class="card-body">
-                    <form method="POST" action="{{ url_for('auth.login') }}">
+                    <form method="POST" action="">
                         {{ form.csrf_token() }}
                         <fieldset class="form-group">
                             <div class="form-group">
