--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,7 +18,7 @@
 				<h3>Sign Up</h3>
 			</div>
 				<div class="card-body">
-					<form method="POST" action="{{ url_for('auth.signup') }}">
+					<form method="POST" action="">
 						{{ form.csrf_token() }}
 						<fieldset class="form-group">
 							<div class=" form-group">
