--- a/templates/todos.html
+++ b/templates/todos.html
@@ -12,7 +12,7 @@
         {% endif %}
     {% endwith %}
     <div class="card-body">
-        <form method="POST" action="{{ url_for('todos.add_todo') }}">
+        <form method="POST" action="">
             {{ form.csrf_token() }}
             <div class="form-group">
                 {% if form.text.errors %}
@@ -46,7 +46,7 @@
                 <div class="modal fade" id="editModal{{ todo.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <form method="POST" action="{{ url_for('todos.edit_todo', id=todo.id) }}">
+                            <form method="POST" action="">
                                 {{ form.csrf_token() }}
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Update todo?</h5>
@@ -109,7 +109,7 @@
                 <div class="modal fade" id="editModal{{ todo.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <form method="POST" action="{{ url_for('todos.edit_todo', id=todo.id) }}">
+                            <form method="POST" action="">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Update todo?</h5>
                                     {% if form.text.errors %}
