Added flask-admin integration, changed db model

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,7 +3,7 @@ html,body{
 /*background-image: url('https://raw.githubusercontent.com/basnijholt/lovelace-ios-dark-mode-theme/master/backgrounds/homekit-bg-4.jpeg');
 background-size: cover;
 background-repeat: no-repeat;*/
-background-color: darkolivegreen;
+background-color: darkslateblue;
 height: 100%;
 }
 
