--- a/templates/base.html
+++ b/templates/base.html
@@ -19,32 +19,41 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto">
         {% if current_user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('notes.show_notes') }}">Notes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('todos.show_todos') }}">Todos</a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('notes.show_notes') }}">Notes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('todos.show_todos') }}">Todos</a>
+          </li>
         {% endif %}
-        {% if not current_user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign Up</a>
-        </li>
+        {% if current_user.is_admin %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('admin.index') }}">Admin</a>
+          </li>
         {% endif %}
-        {% if current_user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-        {% endif %}
-      </li>
+      </ul>
+      {% if not current_user.is_authenticated %}
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign Up</a>
+          </li>
         </ul>
+      {% endif %}
+      {% if current_user.is_authenticated %}
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+          </li>
+        </ul>    
+      {% endif %}
     </div>
     </nav>
   <body>
