--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        {% if current_user.is_authenticated %}
+        {% if current_user.is_authenticated and current_user.confirmed %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
           </li>
@@ -30,8 +30,12 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('todos.show_todos') }}">Todos</a>
           </li>
+          {% elif current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.unconfirmed') }}">Confirm</a>
+          </li>
         {% endif %}
-        {% if current_user.is_admin %}
+        {% if current_user.admin %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin.index') }}">Admin</a>
           </li>
