--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="title">
-  Flask Login Example
+  Welcome!
 </h1>
 <h2 class="subtitle">
   Easy authentication and authorization in Flask.
