--- a/templates/signup.html
+++ b/templates/signup.html
@@ -81,7 +81,7 @@
 					</form>
 					</div>
 					<div class="border-top pt-3">
-						<small class="text-muted">
+						<small class="text-muted-custom">
 							Already Have An Account? <a class="ml-2" href="{{ url_for('auth.login') }}">Sign In</a>
 						</small>
 					</div>
