--- a/static/styles.css
+++ b/static/styles.css
@@ -35,13 +35,18 @@ text-align: center;
 
 }
 
+.bg-dark-custom{
+background-color: rgba(0,0,0,0.5)
+}
+
+
 .container{
 height: 100%;
 align-content: center;
 }
 
 .card_login{
-height: 480px;
+height: 460px;
 margin-top: auto;
 margin-bottom: auto;
 width: 400px;
@@ -72,6 +77,25 @@ background-color: rgba(0,0,0,0.5) !important;
 border-radius: .25rem;  
 }
 
+.card_email{
+height: 360px;
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
+border-radius: .25rem;  
+}
+
+.card_password{
+height: 440px;
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
+border-radius: .25rem;  
+}
+
+
 .card-header h3{
 color: white;
 }
@@ -91,11 +115,29 @@ font-size: 1rem;
 color: white;
 text-align: left;
 list-style: none;
-background-color: darkslateblue;
+background-color: rgba(0,0,0,0.5) !important;
 background-clip: padding-box;
 border: 1px solid rgba(0,0,0,.15);
-border-radius: .25rem; 
-border-color: white;   
+border-radius: .25rem;   
+}
+
+.dropdown-item-custom{
+color: white ;
+display: block;
+width: 100%;
+padding: .25rem 1.5rem;
+clear: both;
+font-weight: 400;
+text-align: inherit;
+white-space: nowrap;
+background-color: transparent;
+border: 0;
+}
+
+.dropdown-item-custom:focus, .dropdown-item-custom:hover {
+    color: #16181b;
+    text-decoration: none;
+    background-color: #f8f9fa;
 }
 
 .form-check-label{
@@ -148,4 +190,9 @@ color: white;
 
 .links a{
 margin-left: 4px;
+}
+
+.text-muted-custom{
+    color: white;
+    padding-left: 1.5rem;
 }
