--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <!--Custom styles-->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
   </head>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom">
     <a class="navbar-brand" href="{{ url_for('main.index') }}">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
