Fixes todo edit, css styling for todo, login, signup, index

--- a/static/styles.css
+++ b/static/styles.css
@@ -196,3 +196,8 @@ margin-left: 4px;
     color: white;
     padding-left: 1.5rem;
 }
+
+.text-muted-custom-login{
+    color: white;
+    padding-left: 1rem;
+}
