--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
+<h1 class="title text-center" style="color: white;">
   Welcome!
 </h1>
-<h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+<h2 class="subtitle text-center" style="color: white;">
+  Demo Flask Application 
 </h2>
 {% endblock %}
