--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
                         </small>
                     </form>
                     <div class="border-top pt-3">
-                        <small class="text-muted-custom">
+                        <small class="text-muted-custom-login">
                             Need An Account? <a class="ml-2" href="{{ url_for('auth.signup') }}">Sign Up Now</a>
                         </small>
                     </div>
