--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block title %} 
+Uncofirmed
+{% endblock %}
 
+{% block content %}
 <h1>Welcome!</h1>
 <br>
 <div class="card-body">
