--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %} 
+Login
+{% endblock %}
+
 {% block content %}
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
@@ -53,7 +57,7 @@
                             </div>
                         </fieldset>
                         <div class="form-group">
-                            {{ form.submit(class="btn btn-outline-info") }}
+                            {{ form.submit(class="btn btn-outline-primary") }}
                         </div>
                         <small class="text-muted ml-2">
                             <a href="{{ url_for('auth.reset_request') }}">Forgot Password?</a>
