--- a/templates/notes_add.html
+++ b/templates/notes_add.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block title %} 
+Notes
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="card-body">
@@ -32,7 +37,7 @@
             </div>
             <div class="form-group">
                 <a href="{{ url_for('notes.show_notes') }}" type="close" class="btn btn-secondary">Close</a>
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.submit(class="btn btn-outline-primary") }}
             </div>
         </form>
     </div>
