--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,82 +1,91 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block title %} 
+Profile
+{% endblock %}
 
-<div class="dropdown">
-  <div class="dropdown-menu-custom">
-    <a class="dropdown-item-custom" href="{{ url_for('main.profile') }}">Change password</a>
-    <a class="dropdown-item-custom" href="{{ url_for('main.profile_change_email') }}">Change email</a>
-  </div>
-</div>
+{% block content %}
 <div class="container">
-	<div class="d-flex justify-content-center h-100">
-		<div class="card_login_with_alert_sign_up">
-			{% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    {% for category, message in messages %}
-                        <div class="alert alert-{{ category }}">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-			<div class="card_password">
-			<div class="card-header">
-				<h3>Change Password</h3>
-			</div>
-				<div class="card-body">
-					<form method="POST" action="">
-						{{ form.csrf_token() }}
-						<fieldset class="form-group">
-							<div class="form-group">
-								{{ form.current_password.label(class="form-control-label") }}
-								{% if form.current_password.errors %}
-									{{ form.current_password(class="form-control form-control-lg is-invalid") }}
-									<div class="invalid-feedback">
-										{% for error in form.current_password.errors %}
-											<span>{{ error }}</span>
-										{% endfor %}
-									</div>
-								{% else %}
-									{{ form.current_password(class="form-control form-control-lg", placeholder='Current Password') }}
-								{% endif %}
-              </div>
+  <div class="row">
+    <div class="col">
+      <div class="dropdown">
+        <div class="dropdown-menu-custom">
+          <a class="dropdown-item-custom" href="{{ url_for('main.profile') }}">Change password</a>
+          <a class="dropdown-item-custom" href="{{ url_for('main.profile_change_email') }}">Change email</a>
+        </div>
+      </div>  
+    </div>
+  </div>
+  <div class="col">
+    <div class="d-flex justify-content-center h-100">
+      <div class="card_login_with_alert_sign_up">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <div class="card_password">
+          <div class="card-header">
+            <h3>Change Password</h3>
+          </div>
+          <div class="card-body">
+            <form method="POST" action="">
+              {{ form.csrf_token() }}
+              <fieldset class="form-group">
+                <div class="form-group">
+                  {{ form.current_password.label(class="form-control-label") }}
+                  {% if form.current_password.errors %}
+                    {{ form.current_password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                      {% for error in form.current_password.errors %}
+                        <span>{{ error }}</span>
+                      {% endfor %}
+                    </div>
+                  {% else %}
+                    {{ form.current_password(class="form-control form-control-lg", placeholder='Current Password') }}
+                  {% endif %}
+                </div>
+                <div class="form-group">
+                  {{ form.new_password.label(class="form-control-label") }}
+                  {% if form.new_password.errors %}
+                    {{ form.new_password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                      {% for error in form.new_password.errors %}
+                        <span>{{ error }}</span>
+                      {% endfor %}
+                    </div>
+                  {% else %}
+                    {{ form.new_password(class="form-control form-control-lg", placeholder='New Password') }}
+                  {% endif %}
+                </div>
+                <div class="form-group">
+                  {{ form.confirm_password.label(class="form-control-label") }}
+                  {% if form.confirm_password.errors %}
+                    {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                      {% for error in form.confirm_password.errors %}
+                        <span>{{ error }}</span>
+                      {% endfor %}
+                    </div>
+                  {% else %}
+                    {{ form.confirm_password(class="form-control form-control-lg", placeholder='Confirm Password') }}
+                  {% endif %}
+                </div>
+              </fieldset>
               <div class="form-group">
-								{{ form.new_password.label(class="form-control-label") }}
-								{% if form.new_password.errors %}
-									{{ form.new_password(class="form-control form-control-lg is-invalid") }}
-									<div class="invalid-feedback">
-										{% for error in form.new_password.errors %}
-											<span>{{ error }}</span>
-										{% endfor %}
-									</div>
-								{% else %}
-									{{ form.new_password(class="form-control form-control-lg", placeholder='New Password') }}
-								{% endif %}
-							</div>
-							<div class="form-group">
-								{{ form.confirm_password.label(class="form-control-label") }}
-								{% if form.confirm_password.errors %}
-									{{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
-									<div class="invalid-feedback">
-										{% for error in form.confirm_password.errors %}
-											<span>{{ error }}</span>
-										{% endfor %}
-									</div>
-								{% else %}
-									{{ form.confirm_password(class="form-control form-control-lg", placeholder='Confirm Password') }}
-								{% endif %}
-							</div>
-						</fieldset>
-						<div class="form-group">
-							{{ form.submit(class="btn btn-outline-info") }}
-						</div>
-					</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                {{ form.submit(class="btn btn-outline-primary") }}
+              </div>
+            </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
 </div>
 
 
