--- a/templates/reset_request.html
+++ b/templates/reset_request.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %} 
+Reset Password
+{% endblock %}
+
 {% block content %}
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
