--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block title %} 
+Reset Password
+Signup
+{% endblock %}
+
 {% block content %}
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
@@ -76,7 +81,7 @@
 							</div>
 						</fieldset>
 						<div class="form-group">
-							{{ form.submit(class="btn btn-outline-info") }}
+							{{ form.submit(class="btn btn-outline-primary") }}
 						</div>
 					</form>
 					</div>
