--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -19,6 +19,7 @@ Uncofirmed
     {% endwith %}
 </div>
 <p style="color: white;">You have not confirmed your account. Please check your inbox (and your spam folder) - you should have received an email with a confirmation link.</p>
-<p >Didn't get the email? <a href="{{ url_for('auth.resend_confirmation') }}">Resend</a>.</p>
+<p style="color: white;">Didn't get the email? </p> 
+<p style="color: white;"> <a href="{{ url_for('auth.resend_confirmation') }}">Resend</a></p>
 
 {% endblock %}
