--- a/templates/reset_request.html
+++ b/templates/reset_request.html
@@ -17,7 +17,7 @@ Reset Password
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <div class="card_login">
+            <div class="card_reset">
 			<div class="card-header">
 				<h3>Reset Password</h3>
 			</div>
@@ -40,7 +40,7 @@ Reset Password
                             </div>
                         </fieldset>
                         <div class="form-group">
-                            {{ form.submit(class="btn btn-outline-info") }}
+                            {{ form.submit(class="btn btn-outline-primaty") }}
                         </div>
                     </form>
                 </div>
